tests/specs/check/css_import/not_exists.ts
import "./not_exists.css";
